--- a/auctions/static/auctions/styles.css
+++ b/auctions/static/auctions/styles.css
@@ -1,3 +1,30 @@
 body {
     padding: 10px;
 }
+
+.row {
+	margin: 1px;
+}
+
+.listing-col {
+	border: 1px solid #bbb;
+}
+
+.listing-col > div {
+	margin: 5px;
+}
+
+.image-wrapper {
+	height: 150px; /* fixed height */
+	width: 100%; /* take full column width */
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	overflow: hidden;
+}
+
+.image-wrapper img {
+	max-height: 100%;
+	max-width: 100%;
+	object-fit: contain;
+}
