Create Basic Listing Page With No Functionality

--- a/auctions/static/auctions/styles.css
+++ b/auctions/static/auctions/styles.css
@@ -31,3 +31,15 @@ body {
 	max-width: 100%;
 	object-fit: contain;
 }
+
+.link {
+	color: black;
+}
+
+.link:hover {
+	color: black;
+}
+
+#container  * {
+	margin: 10px 0px;	
+}
