Add "Close Bid" Feature
- allow the user who posted a listing to close their bid
- add 'close_bid' to views.py and urls.py
- add 'closed' view to views.py
- update listing.html

--- a/auctions/templates/auctions/index.html
+++ b/auctions/templates/auctions/index.html
@@ -2,7 +2,14 @@
 
 {% block body %}
 
-    <h2>Active Listings</h2>
+    <h2>
+		{% if active %}
+			Active
+		{% else %}
+			Closed
+		{% endif %}
+		Listings
+	</h2>
 
 		{% for listing in listings %}
 			<a href="{% url 'listing' listing_id=listing.id %}" class="link" style="text-decoration: none;">
